Reworked to fix safari jump bug.

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -29,10 +29,9 @@ fieldset {
     &.radio {
         border-radius: 0;
         border: 0;
-        height: 24px;
+        height: auto;
         padding: 0;
-        vertical-align: top;
-        width: 14px;
+        vertical-align: middle;
     }
 
     &[type="file"],
